# bacok

./: CMakeLists.txt  README.md  package.xml
include/bacok/: dubinsPath.h  frameTransport.h  geolocation.h
launch/: objectTracking.launch.py  run.launch.py  testTelem.launch.py
src/: action.cpp  attitude_control.cpp  dubinTest.cpp  offboard_dubins.cpp  processTelem.cpp  takeoff.cpp  test.cpp  test.py
src/lib/: dubinsPath.cpp  frameTransport.cpp  geolocation.cpp
