<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bacok</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ambatron@todo.todo">ambatron</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>\
  
  <build_depend>eigen</build_depend>
  <build_depend>ros_environment</build_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>std_msgs</depend>
  <depend>bohoso</depend>
  
  <exec_depend>ros2launch</exec_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
